disable ugly option for database

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     security_opt:
       - no-new-privileges:true
     pids_limit: 100
-    read_only: true
+    #read_only: true
     tmpfs:
       - /tmp
       - /var/run/postgresql
